samples/_failures_safe/1761241889_6c3fb1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f7d12765.c: In function ‘main’:
./samples/SAFE/__tmp_f7d12765.c:157:21: error: expected declaration or statement at end of input
  157 |                     printf("Error: Integer overflow during addition.\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_f7d12765.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f7d12765.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f7d12765.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f7d12765.c:157:21: error: expected declaration or statement at end of input
